# vit-deptql

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: build_test.yml
docker/: DockerfileDev  DockerfileProd  docker-compose.prod.yml
src/: cli.rs  config.rs  defaults.rs  graphql.rs  main.rs  models.rs
src/resolvers/: user.rs
