[package]
name = "vit-graphql"
version = "0.1.0"
authors = ["123L Team and contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "vit"
path = "src/main.rs"

[dependencies]
actix-web = "3"
async-graphql = "2.9.9"
async-graphql-actix-web = "2.9.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
clap = "2.33.3"