[package]
name = "vit-graphql"
version = "0.1.0"
authors = ["123L Team and contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "vit"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-web-lab = "0.10"
async-graphql = "3"
async-graphql-actix-web = "3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9"
log = "0.4"
url = "2.2.2"
dotenv = "0.15.0"
clap = "2.33.3"
